# pdfl

./: Cargo.toml  README.md  tarpaulin-report.html
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: index.html  pdfl.js  pdfl_bg.wasm
docs/examples/: circle.pdfl  complete.pdfl  font.pdfl  image.pdfl  rectangle.pdfl  simple.pdfl  text.pdfl
examples/: text.pdfl
src/: grammar.lalrpop  lexer.rs  lib.rs  main.rs  parser.rs
src/ast2pdft/: attribute_parser.rs  catalog_converter.rs  content_converter.rs  element_converter.rs  font_converter.rs  image_converter.rs  mod.rs  page_converter.rs  pages_converter.rs  pdf_converter_main.rs
src/lexer/: constants.rs  mod.rs
src/parser/: constants.rs  mod.rs
src/pdf_tree/: catalog_node.rs  circle_node.rs  content_node.rs  font_descriptor_node.rs  font_node.rs  image_node.rs  image_xobject_node.rs  line_node.rs  mod.rs  page_node.rs  pages_node.rs  pdf_node.rs  rectangle_node.rs  text_node.rs
