[package]
name = "pdfl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
lalrpop-util = { version = "0.20", features = ["lexer"] }
clap = { version = "4.5.39", features = ["derive"] }
wasm-bindgen = "0.2"
flate2 = "1.0"
image = "0.25"

[build-dependencies]
lalrpop = "0.22.2"
